# nina-catalogue

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  helpers.sh  manage.py  pyproject.toml  skosmos.ttl
.github/workflows/: ci.yml  publish.yml
bruno/: Dockerfile
bruno/Metadata catalogue/: bruno.json
bruno/catalogue/: asserts.js  entrypoint.sh  package-lock.json  package.json
bruno/catalogue/CSW/: GetDomain.bru
bruno/catalogue/MAPS/: Docs.bru  Get Map metadata.bru  Get Map style.bru  Openapi.bru
bruno/catalogue/environments/: Docker.bru
config/: api.py  routers.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Dockerfile  book.toml  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/src/: SUMMARY.md  architecture.md  features.md  maps.md  maps.puml
docs/src/datasets/: datasets.puml  dwca.md  index.md  pygeoapi.puml
locale/en_US/LC_MESSAGES/: django.po
locale/no/LC_MESSAGES/: django.po
metadata_catalogue/: conftest.py
metadata_catalogue/cms/: blocks.py  models.py
metadata_catalogue/cms/migrations/: 0001_initial.py  0002_alter_homepage_hero_text.py
metadata_catalogue/core/: apps.py  brokers.py  fields.py  models.py  utils.py
metadata_catalogue/core/migrations/: 0001_initial.py
metadata_catalogue/core/templatetags/: pagination.py
metadata_catalogue/csw/: admin.py  apps.py  models.py  urls.py  views.py
metadata_catalogue/csw/migrations/: 0003_alter_cswconfig_contact_address_and_more.py  0005_alter_cswconfig_profiles.py
metadata_catalogue/datasets/: admin.py  apps.py  filters.py  forms.py  managers.py  mappings.py  models.py  repository.py  signals.py  tables.py  tasks.py  urls.py  views.py
metadata_catalogue/datasets/csw/: admin.py  apps.py  models.py  urls.py  views.py
metadata_catalogue/datasets/geoapi/: admin.py  apps.py  models.py  urls.py  views.py
metadata_catalogue/datasets/libs/: checks.py  csw_mapping.py  csw_query.py  harvester.py  harvesters.py  ipt.py  iso_mapping.py  utils.py
metadata_catalogue/datasets/migrations/: 0001_initial.py  0002_alter_metadata_keywords.py  0002_alter_person_options_alter_personrole_options.py  0002_taxonomy_common_alter_taxonomy_name_and_more.py  0003_alter_personrole_role_and_more.py  0003_dataset_source.py  0003_remove_person_unique_person.py  0004_dataset_last_fetch_at_dataset_uuid_and_more.py  0004_organizationrole_unique_role_per_org_in_metadata.py  0004_remove_personrole_unique_role_per_person_in_metadata_and_more.py  0005_dataset_public.py  0005_metadata_fts_metadata_xml.py  0006_alter_metadata_fts_alter_metadata_xml_serviceinfo.py  0006_content_valid.py  0007_content_data_override_content_pagination_and_more.py  0007_serviceinfo_contact_hours_and_more.py  0008_alter_content_data_override_and_more.py  0008_serviceinfo_language.py  0009_content.py  0009_content_created_at_content_modified_at.py  0010_content_remote_source.py  (+2 more)
metadata_catalogue/dictionaries/: conf.py  rdf_functions.py  urls.py  utils.py  views.py
metadata_catalogue/fixtures/: datasets.json  topics.json
metadata_catalogue/hash/: example_migration.py  models.py
metadata_catalogue/maps/: admin.py  api.py  apis.py  conf.py  enums.py  filters.py  models.py  rules.py  schema.py  storage.py  tables.py  urls.py  views.py
metadata_catalogue/maps/api/: helpers.py  (+2 more)
metadata_catalogue/nina/: admin.py  conf.py  filters.py  forms.py  models.py  rules.py  urls.py  views.py
metadata_catalogue/projects/: admin.py  conf.py  models.py  urls.py  views.py
metadata_catalogue/reports/: models.py
metadata_catalogue/templates/: app.html  base.html  components.yaml
metadata_catalogue/theme/: apps.py  forced_classes.py
metadata_catalogue/users/: adapters.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
nginx/: Dockerfile  default.conf.template  maps.conf.template  maps.config.js
requirements/: base.txt  local.txt  production.txt
scripts/: start  start_qcluster
setup/: generate.sh
varnish/: default.vcl
(+191 files in other folders)
